新增: 完成浏览器图片采集队列
